// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_FAILURE",
}
`;

exports[`creates a FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
}
`;

exports[`creates a FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
}
`;

exports[`handles FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;

exports[`handles FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": true,
}
`;

exports[`handles FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "isFetching": false,
}
`;

exports[`handles fetchConsecutiveData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          752,
          470,
          874,
          374,
        ],
        "serial": Array [
          461,
          462,
          463,
          464,
          465,
        ],
      },
      Object {
        "others": Array [
          419,
          525,
          903,
          56,
        ],
        "serial": Array [
          155,
          156,
          157,
          158,
          159,
        ],
      },
      Object {
        "others": Array [
          245,
          682,
          349,
          133,
        ],
        "serial": Array [
          915,
          916,
          917,
          918,
          919,
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMatchData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Array [
        "w",
        "w",
      ],
      Array [
        "I",
        "I",
      ],
      Array [
        "x",
        "x",
      ],
      Array [
        "c",
        "c",
      ],
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMultipleChoiceData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answerIndex": 3,
        "choices": Array [
          "W",
          "K",
          "N",
          "E",
        ],
        "question": "E",
      },
      Object {
        "answerIndex": 0,
        "choices": Array [
          "D",
          "B",
          "F",
          "H",
        ],
        "question": "D",
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchSerialData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": 409,
        "serial": Array [
          406,
          407,
          408,
          409,
          410,
          411,
          412,
          413,
          414,
        ],
      },
      Object {
        "answer": 293,
        "serial": Array [
          291,
          292,
          293,
          294,
          295,
          296,
          297,
        ],
      },
      Object {
        "answer": 465,
        "serial": Array [
          456,
          457,
          458,
          459,
          460,
          461,
          462,
          463,
          464,
          465,
          466,
          467,
          468,
        ],
      },
      Object {
        "answer": 140,
        "serial": Array [
          135,
          136,
          137,
          138,
          139,
          140,
          141,
          142,
          143,
          144,
          145,
          146,
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchWordData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "W",
          "S",
          "X",
          "C",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "V",
          "T",
          "O",
          "B",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "Y",
          "N",
          "Q",
          "M",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`returns the same state on an unhandled action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;
